[gd_scene load_steps=10 format=2]

[ext_resource path="res://hud/system/fleet/ship_group_fleet_menu.gd" type="Script" id=1]
[ext_resource path="res://gui/spin_box_imediate_update.gd" type="Script" id=2]
[ext_resource path="res://gui/utils/button_click_sound_utils.gd" type="Script" id=3]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/ship_64px.png-0d665bcf942a48fa390e6ccbc93bfc35.stex"

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/Health.svg-53e4460467ebc4eedba8f1ab930f587c.stex"

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/Damage.svg-926cdbe820d5d839b9d3d962a6963660.stex"

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/Precision.svg-49c8a2035941f98d4e05ebd44b03227a.stex"

[sub_resource type="StreamTexture" id=5]
flags = 4
load_path = "res://.import/fleet.png-7b3afe225b29b788c820a5d01173695d.stex"

[sub_resource type="StreamTexture" id=6]
flags = 4
load_path = "res://.import/shipyard_64px.png-9659b91d7bdcf9c341e17aaa0f9fc354.stex"

[node name="ShipGroupFleetMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 3
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 2247.0
margin_bottom = 1079.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 2239.0
margin_bottom = 1071.0

[node name="Control" type="Control" parent="PanelContainer/HBoxContainer"]
visible = false
margin_right = 3.0
margin_bottom = 1064.0
rect_min_size = Vector2( 3, 0 )
mouse_filter = 1

[node name="ShipModel" type="Label" parent="PanelContainer/HBoxContainer"]
margin_top = 525.0
margin_right = 205.0
margin_bottom = 539.0
rect_min_size = Vector2( 150, 0 )
text = "hud.details.fleet.ship_model %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="PanelContainer/HBoxContainer"]
margin_left = 209.0
margin_right = 219.0
margin_bottom = 1064.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureModel" type="TextureRect" parent="PanelContainer/HBoxContainer"]
margin_left = 223.0
margin_top = 516.0
margin_right = 255.0
margin_bottom = 548.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 4
texture = SubResource( 1 )
expand = true
stretch_mode = 6

[node name="Control3" type="Control" parent="PanelContainer/HBoxContainer"]
margin_left = 259.0
margin_right = 269.0
margin_bottom = 1064.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer"]
margin_left = 273.0
margin_right = 293.0
margin_bottom = 1064.0
rect_min_size = Vector2( 20, 20 )
texture = SubResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitPoint" type="Label" parent="PanelContainer/HBoxContainer"]
margin_left = 297.0
margin_top = 525.0
margin_right = 485.0
margin_bottom = 539.0
text = "hud.details.fleet.hit_point %d"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control6" type="Control" parent="PanelContainer/HBoxContainer"]
margin_left = 489.0
margin_right = 499.0
margin_bottom = 1064.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/HBoxContainer"]
margin_left = 503.0
margin_right = 523.0
margin_bottom = 1064.0
rect_min_size = Vector2( 20, 20 )
texture = SubResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Damage" type="Label" parent="PanelContainer/HBoxContainer"]
margin_left = 527.0
margin_top = 525.0
margin_right = 709.0
margin_bottom = 539.0
text = "hud.details.fleet.damage %d"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control8" type="Control" parent="PanelContainer/HBoxContainer"]
margin_left = 713.0
margin_right = 723.0
margin_bottom = 1064.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/HBoxContainer"]
margin_left = 727.0
margin_right = 747.0
margin_bottom = 1064.0
rect_min_size = Vector2( 20, 20 )
texture = SubResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accuracy" type="Label" parent="PanelContainer/HBoxContainer"]
margin_left = 751.0
margin_top = 525.0
margin_right = 938.0
margin_bottom = 539.0
text = "hud.details.fleet.accuracy %d"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control9" type="Control" parent="PanelContainer/HBoxContainer"]
margin_left = 942.0
margin_right = 952.0
margin_bottom = 1064.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer"]
visible = false
margin_left = 963.0
margin_top = 525.0
margin_right = 1163.0
margin_bottom = 539.0
text = "hud.details.fleet.ship_to_assign"

[node name="SpinBox" type="SpinBox" parent="PanelContainer/HBoxContainer"]
margin_left = 956.0
margin_top = 520.0
margin_right = 1030.0
margin_bottom = 544.0
size_flags_vertical = 4
rounded = true
script = ExtResource( 2 )

[node name="Control4" type="Control" parent="PanelContainer/HBoxContainer"]
margin_left = 1034.0
margin_right = 1044.0
margin_bottom = 1064.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer"]
margin_left = 1048.0
margin_top = 522.0
margin_right = 1353.0
margin_bottom = 542.0
size_flags_vertical = 4
text = "hud.details.system.fleet.menu.group_ship.set"
script = ExtResource( 3 )

[node name="Control5" type="Control" parent="PanelContainer/HBoxContainer"]
margin_left = 1357.0
margin_right = 1367.0
margin_bottom = 1064.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxAssign" type="Button" parent="PanelContainer/HBoxContainer"]
margin_left = 1371.0
margin_top = 522.0
margin_right = 1588.0
margin_bottom = 542.0
size_flags_vertical = 4
text = "hud.details.fleet.max_assign %d"
script = ExtResource( 3 )

[node name="Control10" type="Control" parent="PanelContainer/HBoxContainer"]
margin_left = 1592.0
margin_right = 1602.0
margin_bottom = 1064.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipFleet" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 1606.0
margin_right = 1910.0
margin_bottom = 1064.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/ShipFleet"]
margin_top = 516.0
margin_right = 32.0
margin_bottom = 548.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 4
texture = SubResource( 5 )
expand = true
stretch_mode = 6

[node name="Control" type="Control" parent="PanelContainer/HBoxContainer/ShipFleet"]
visible = false
margin_left = 36.0
margin_right = 46.0
margin_bottom = 1064.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/ShipFleet"]
margin_left = 36.0
margin_top = 525.0
margin_right = 304.0
margin_bottom = 539.0
rect_min_size = Vector2( 30, 0 )
text = "hud.details.fleet.number_of_ship_fleet %d"

[node name="Control7" type="Control" parent="PanelContainer/HBoxContainer"]
margin_left = 1914.0
margin_right = 1924.0
margin_bottom = 1064.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipAvaliable" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 1928.0
margin_right = 2232.0
margin_bottom = 1064.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/ShipAvaliable"]
margin_top = 516.0
margin_right = 32.0
margin_bottom = 548.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 4
texture = SubResource( 6 )
expand = true
stretch_mode = 6

[node name="Control" type="Control" parent="PanelContainer/HBoxContainer/ShipAvaliable"]
visible = false
margin_left = 36.0
margin_right = 46.0
margin_bottom = 1064.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/ShipAvaliable"]
margin_left = 36.0
margin_top = 525.0
margin_right = 304.0
margin_bottom = 539.0
rect_min_size = Vector2( 30, 0 )
text = "hud.details.fleet.number_of_ship_total %d"
